# soft_rasterization

./: CMakeLists.txt  a3.hs  main.cpp
src/: draw_call.cpp  draw_call.hpp  fragment_shader.cpp  fragment_shader.hpp  parallel.cpp  parallel.hpp  screen.cpp  screen.hpp  screen_shape.hpp  shape.hpp  vertex_shader.cpp  vertex_shader.hpp
